# cos-cpp-sdk-v5

./: .gitignore  CMakeLists.txt  build_android.sh  build_ios.sh  在 Android 平台使用.md  在 iOS 平台使用.md
demo/example-android-app/: settings.gradle
demo/example-android-app/app/: build.gradle
demo/example-android-app/app/src/androidTest/java/com/tencent/cloud/cos/example/: ExampleInstrumentedTest.java
demo/example-android-app/app/src/main/: AndroidManifest.xml
demo/example-android-app/app/src/main/cpp/: CMakeLists.txt  cos.hpp  logger.cpp  logger.hpp  native-lib.cpp
demo/example-android-app/app/src/main/java/com/tencent/cloud/cos/example/: MainActivity.java
demo/example-android-app/app/src/main/res/values/: strings.xml
demo/example-android-app/app/src/test/java/com/tencent/cloud/cos/example/: ExampleUnitTest.java
demo/example-android-app/gradle/wrapper/: gradle-wrapper.properties
demo/example-cos-app/: Podfile
demo/example-cos-app/example-cos-app/: AppDelegate.h  SceneDelegate.h  ViewController.h  config.json
demo/example-cos-app/example-cos-app.xcodeproj/: project.pbxproj
demo/example-cos-app/example-cos-app.xcodeproj/project.xcworkspace/xcuserdata/wjielai.xcuserdatad/: UserInterfaceState.xcuserstate
demo/example-cos-app/example-cos-app.xcworkspace/: contents.xcworkspacedata
demo/example-cos-app/example-cos-appTests/: example_cos_appTests.m
demo/example-ios-app/: .gitignore
demo/example-ios-app/example-cos-app/: AppDelegate.m  SceneDelegate.m  ViewController.mm  cos.cpp  main.m
demo/example-ios-app/example-cos-app.xcodeproj/project.xcworkspace/xcuserdata/wjielai.xcuserdatad/: UserInterfaceState.xcuserstate
demo/example-ios-app/example-cos-app.xcodeproj/xcuserdata/wjielai.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/example-ios-app/example-cos-app.xcworkspace/xcuserdata/wjielai.xcuserdatad/: UserInterfaceState.xcuserstate
demo/example-ios-app/example-cos-appUITests/: example_cos_appUITests.m
